--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.3.10.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.3.12.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
