--- a/src/main/resources/rest-http-default.properties
+++ b/src/main/resources/rest-http-default.properties
@@ -1,6 +1,8 @@
-server=org.hum.resthttp.transport.netty.NettyServer
+#server=org.hum.resthttp.transport.netty.NettyServer
+server=org.hum.resthttp.transport.jdktcp.TcpServer
 serialize=org.hum.resthttp.serialization.FastJsonSerialization
-mapper=org.hum.resthttp.mapper.annotation.AnnotationMapper
+#mapper=org.hum.resthttp.mapper.annotation.AnnotationMapper
+mapper=org.hum.resthttp.mapper.annotation.ScanClassPathAnnationMapper
 invoker=org.hum.resthttp.invoker.wrapper.DefaultInvokerWrapper
 invoker_holder=org.hum.resthttp.invoker.holder.DefaultInvokerHolder
 threadpool=org.hum.resthttp.executors.FixedThreadPool
